--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Adivinha</string>
+    <string name="insert_number">Insert Number</string>
+    <string name="inserir">Number (Between 1 and 10)</string>
+    <string name="try_find_the_number_i_think">try find the number i think</string>
+    <string name="button">Try</string>
+    <string name="number_of_trys">Number of Trys</string>
+    <string name="Number_trys">0</string>
+    <string name="Restart">Restart</string>
+    <string name="TryButon">TRY</string>
 </resources>
