--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Adivinha</string>
+    <string name="app_name">Guess What</string>
     <string name="insert_number">Insert Number</string>
     <string name="inserir">Number (Between 1 and 10)</string>
     <string name="try_find_the_number_i_think">try find the number i think</string>
@@ -8,4 +8,7 @@
     <string name="Number_trys">0</string>
     <string name="Restart">Restart</string>
     <string name="TryButon">TRY</string>
+    <string name="begin">Start</string>
+    <string name="exit">Exit</string>
+    <string name="number_already_used">Number Already Used:</string>
 </resources>
